@@ -1,26 +1,0 @@
-IDIR =../include
-CC=gcc
-CFLAGS=-I$(IDIR)
-
-ODIR=obj
-LDIR =../lib
-
-LIBS=-lm
-
-_DEPS = config.h dnsfw.h hosts.h
-DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
-
-_OBJ = dnsfw.o 
-OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
-
-
-$(ODIR)/%.o: %.c $(DEPS)
-	$(CC) -c -o $@ $< $(CFLAGS)
-
-dnsfw: $(OBJ)
-	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
-
-.PHONY: clean
-
-clean:
-	rm -f $(ODIR)/*.o *~ core $(INCDIR)/*~
