@@ -1,29 +1,0 @@
-# backup line incase you dont listen to the warning, remove the #...
-#!V:1
-# DO NOT REMOVE OR MODIFY THE FOLLOWING LINE OR CORRUPTION COULD OCCUR
-!V:2
-#!D:<num> is a debug level, or sum thereof, of following:
-# 0: None - no logfile entries will occur
-# 1: Fatal
-# 2: Error
-# 4: Warning
-# 8: Info
-# 16: Debug
-# 32: Trace
-# --- the following may be used as well and have been pre-calculated for you.
-# 11: Notice, Error, Info (Recommended)
-# 63: All levels (Not recommended)
-!D:63
-# Bacon Dns Firewall Config File
-# Hashbang represents a comment in this configuration
-# DO NOT LEAVE TRAILING SPACES
-#
-# Please store as:
-#
-# the.rnds.com 23 1000 400
-#
-# or, for all ports and proto:
-#
-# the.rdns.com 0
-local.bacon.place 22 2500 80
-not.a.real.host 0
