@@ -27,6 +27,8 @@
  * # the.rdns.com 0
  */
 #include "hosts.h"
+#define CONF_FILE_PREFIX "/etc/bacon/"
+#define CONF_LOG_PREFIX "/var/log/"
 #define CONF_FILE "dnsfw.conf"
 #define CONF_LOG "dnsfw.log"
 #define CONF_VERSION 2 // increment this by 1 every format change, make sure to update the database (somehow)
@@ -43,5 +45,3 @@
 
 int load_config(void);
 int valid_hostname(const char *);
-
-//#define CONFIG_FILE_ORIG "\23 \0x20 \0x62 \0x61 0x63 0x6b 0x75 0x70 0x20 0x6c 0x69 0x6e 0x65 0x20 0x69 0x6e 0x63 0x61 0x73 0x65 0x20 0x79 0x6f 0x75 0x20 0x64 0x6f 0x6e 0x74 0x20 0x6c 0x69 0x73 0x74 0x65 0x6e 0x20 0x74 0x6f 0x20 0x74 0x68 0x65 0x20 0x77 0x61 0x72 0x6e 0x69 0x6e 0x67 0x2c 0x20 0x72 0x65 0x6d 0x6f 0x76 0x65 0x20 0x74 0x68 0x65 0x20 0x23 0x2e 0x2e 0x2e 0x0a 0x23 0x21 0x56 0x3a 0x32 0x0a 0x23 0x20 0x44 0x4f 0x20 0x4e 0x4f 0x54 0x20 0x52 0x45 0x4d 0x4f 0x56 0x45 0x20 0x4f 0x52 0x20 0x4d 0x4f 0x44 0x49 0x46 0x59 0x20 0x54 0x48 0x45 0x20 0x46 0x4f 0x4c 0x4c 0x4f 0x57 0x49 0x4e 0x47 0x20 0x4c 0x49 0x4e 0x45 0x20 0x4f 0x52 0x20 0x43 0x4f 0x52 0x52 0x55 0x50 0x54 0x49 0x4f 0x4e 0x20 0x43 0x4f 0x55 0x4c 0x44 0x20 0x4f 0x43 0x43 0x55 0x52 0x0a 0x21 0x56 0x3a 0x32 0x0a 0x23 0x21 0x44 0x3a 0x3c 0x6e 0x75 0x6d 0x3e 0x20 0x69 0x73 0x20 0x61 0x20 0x64 0x65 0x62 0x75 0x67 0x20 0x6c 0x65 0x76 0x65 0x6c 0x2c 0x20 0x6f 0x72 0x20 0x73 0x75 0x6d 0x20 0x74 0x68 0x65 0x72 0x65 0x6f 0x66 0x2c 0x20 0x6f 0x66 0x20 0x66 0x6f 0x6c 0x6c 0x6f 0x77 0x69 0x6e 0x67 0x3a 0x0a 0x23 0x20 0x30 0x3a 0x20 0x4e 0x6f 0x6e 0x65 0x20 0x2d 0x20 0x6e 0x6f 0x20 0x6c 0x6f 0x67 0x66 0x69 0x6c 0x65 0x20 0x65 0x6e 0x74 0x72 0x69 0x65 0x73 0x20 0x77 0x69 0x6c 0x6c 0x20 0x6f 0x63 0x63 0x75 0x72 0x0a 0x23 0x20 0x31 0x3a 0x20 0x4e 0x6f 0x74 0x69 0x63 0x65 0x0a 0x23 0x20 0x32 0x3a 0x20 0x45 0x72 0x72 0x6f 0x72 0x0a 0x23 0x20 0x34 0x3a 0x20 0x57 0x61 0x72 0x6e 0x69 0x6e 0x67 0x0a 0x23 0x20 0x38 0x3a 0x20 0x49 0x6e 0x66 0x6f 0x0a 0x23 0x20 0x31 0x36 0x3a 0x20 0x44 0x65 0x62 0x75 0x67 0x0a 0x23 0x20 0x33 0x32 0x3a 0x20 0x54 0x72 0x61 0x63 0x65 0x0a 0x23 0x20 0x2d 0x2d 0x2d 0x20 0x74 0x68 0x65 0x20 0x66 0x6f 0x6c 0x6c 0x6f 0x77 0x69 0x6e 0x67 0x20 0x6d 0x61 0x79 0x20 0x62 0x65 0x20 0x75 0x73 0x65 0x64 0x20 0x61 0x73 0x20 0x77 0x65 0x6c 0x6c 0x20 0x61 0x6e 0x64 0x20 0x68 0x61 0x76 0x65 0x20 0x62 0x65 0x65 0x6e 0x20 0x70 0x72 0x65 0x2d 0x63 0x61 0x6c 0x63 0x75 0x6c 0x61 0x74 0x65 0x64 0x20 0x66 0x6f 0x72 0x20 0x79 0x6f 0x75 0x2e 0x0a 0x23 0x20 0x31 0x35 0x3a 0x20 0x4e 0x6f 0x74 0x69 0x63 0x65 0x2c 0x20 0x45 0x72 0x72 0x6f 0x72 0x2c 0x20 0x49 0x6e 0x66 0x6f 0x2c 0x20 0x57 0x61 0x72 0x6e 0x69 0x6e 0x67 0x20 0x28 0x52 0x65 0x63 0x6f 0x6d 0x6d 0x65 0x6e 0x64 0x65 0x64 0x29 0x0a 0x23 0x20 0x36 0x33 0x3a 0x20 0x41 0x6c 0x6c 0x20 0x6c 0x65 0x76 0x65 0x6c 0x73 0x20 0x28 0x4e 0x6f 0x74 0x20 0x72 0x65 0x63 0x6f 0x6d 0x6d 0x65 0x6e 0x64 0x65 0x64 0x29 0x0a 0x21 0x44 0x3a 0x31 0x35 0x0a 0x23 0x20 0x42 0x61 0x63 0x6f 0x6e 0x20 0x44 0x6e 0x73 0x20 0x46 0x69 0x72 0x65 0x77 0x61 0x6c 0x6c 0x20 0x43 0x6f 0x6e 0x66 0x69 0x67 0x20 0x46 0x69 0x6c 0x65 0x0a 0x23 0x20 0x48 0x61 0x73 0x68 0x62 0x61 0x6e 0x67 0x20 0x72 0x65 0x70 0x72 0x65 0x73 0x65 0x6e 0x74 0x73 0x20 0x61 0x20 0x63 0x6f 0x6d 0x6d 0x65 0x6e 0x74 0x20 0x69 0x6e 0x20 0x74 0x68 0x69 0x73 0x20 0x63 0x6f 0x6e 0x66 0x69 0x67 0x75 0x72 0x61 0x74 0x69 0x6f 0x6e 0x0a 0x23 0x20 0x44 0x4f 0x20 0x4e 0x4f 0x54 0x20 0x4c 0x45 0x41 0x56 0x45 0x20 0x54 0x52 0x41 0x49 0x4c 0x49 0x4e 0x47 0x20 0x53 0x50 0x41 0x43 0x45 0x53 0x0a 0x23 0x0a 0x23 0x20 0x50 0x6c 0x65 0x61 0x73 0x65 0x20 0x73 0x74 0x6f 0x72 0x65 0x20 0x61 0x73 0x3a 0x0a 0x23 0x0a 0x23 0x20 0x74 0x68 0x65 0x2e 0x72 0x6e 0x64 0x73 0x2e 0x63 0x6f 0x6d 0x20 0x32 0x33 0x20 0x31 0x30 0x30 0x30 0x20 0x34 0x30 0x30 0x0a 0x23 0x0a 0x23 0x20 0x6f 0x72 0x2c 0x20 0x66 0x6f 0x72 0x20 0x61 0x6c 0x6c 0x20 0x70 0x6f 0x72 0x74 0x73 0x20 0x61 0x6e 0x64 0x20 0x70 0x72 0x6f 0x74 0x6f 0x3a 0x0a 0x23 0x0a 0x23 0x20 0x74 0x68 0x65 0x2e 0x72 0x64 0x6e 0x73 0x2e 0x63 0x6f 0x6d 0x20 0x30 0x0a 0x6c 0x6f 0x63 0x61 0x6c 0x2e 0x62 0x61 0x63 0x6f 0x6e 0x2e 0x70 0x6c 0x61 0x63 0x65 0x20 0x32 0x32 0x20 0x32 0x35 0x30 0x30 0x20 0x38 0x30 0x0a 0x6e 0x6f 0x74 0x2e 0x61 0x2e 0x72 0x65 0x61 0x6c 0x2e 0x68 0x6f 0x73 0x74 0x20 0x30 0x0a"
